@@ -40,10 +40,8 @@ The command is a program, plus as many optional arguments as required.  Each
 argument may be separately quoted.
 .PP
 A login shell is run in the current working directory inside the chroot.  If
-this is not available, it will try $HOME, the user's home directory inside the
-chroot, and / in turn.  When the \fI-d\fP option is used, it will attempt to
-use the current working directory inside the chroot, again falling back to / if
-it is not accessible.
+this is not available, it will try $HOME (when \fI\-p\fP is used), then the
+user's home directory inside the chroot, and \fI/\fP in turn.
 .PP
 A command is always run in the current working directory inside the chroot.  If
 this is not available, schroot will exit with an error status.
